add: read by feature and group picture change

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chatterly</title>
+  <meta name="author" content="Nilesh Darji">
+  <meta name="description"
+    content="Chatterly - A modern and interactive chat application for seamless communication. Join the conversation and connect with friends in real-time.">
+  <meta name="keywords" content="Chatterly, Chat, Messaging, Communication, Real-time Chat, Social Interaction">
+
+  <meta property="og:title" content="Chatterly - Connect in Real Time">
+  <meta property="og:description"
+    content="Chatterly - A modern and interactive chat application for seamless communication. Join the conversation and connect with friends in real-time.">
+  <meta property="og:image" content="https://chatterlyy.vercel.app/cover.png">
+  <meta property="og:url" content="https://chatterlyy.vercel.app/">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Chatterly - Connect in Real Time">
+  <meta name="twitter:description"
+    content="Chatterly - A modern and interactive chat application for seamless communication. Join the conversation and connect with friends in real-time.">
+  <meta name="twitter:image" content="https://chatterlyy.vercel.app/cover.png">
+
+  <link rel="canonical" href="https://chatterlyy.vercel.app/">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="apple-mobile-web-app-title" content="Chatterly">
+  <meta name="application-name" content="Chatterly">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
+  <title>Chatterly - Connect in Real Time</title>
 </head>
 
 <body>
